--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,8 @@ body {
 
 .blog-section {
 	background-color: white;
+	/* why is inline-block required? it was also reqd for .hero-section */
+	display: inline-block;
 	padding: 64px 0;
 }
 
@@ -108,6 +110,40 @@ body {
 }
 
 .blog-date {
+	font-size: 0.8rem;
+	color: grey;
+	margin: 6px 0 25px 0;
+}
+
+.events-section {
+	background-color: #fdf0e6;
+	display: inline-block;
+	width: 100%;
+	padding: 64px 0;
+}
+
+.events-content {
+	padding: 0 15%;
+}
+
+.events-card {
+	width: 50%;
+	float: left;
+	margin-top: 4px;
+}
+
+.event-title {
+	font-size: 1.3rem;
+	font-weight: 500;
+	margin-bottom: 10px;
+}
+
+.event-location {
+	font-size: 1rem;
+	margin: 0;
+}
+
+.event-date {
 	font-size: 0.8rem;
 	color: grey;
 	margin: 6px 0 25px 0;
